src/objects/Loan_Balance_s_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Fees_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Transaction__c</fullName>
        <label>Loan Payment Transaction</label>
        <referenceTo>Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Loan Balance&apos;s Snapshot</relationshipLabel>
        <relationshipName>Loan_Balance_s_Snapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Penalty_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Penalty Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Fees Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Balance&apos;s Snapshot</label>
    <nameField>
        <displayFormat>LBSID-{0000000000}</displayFormat>
        <label>Loan Balance Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Balance&apos;s Snapshot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>